# genome_selector

./: README.md  dev.ipynb  pyproject.toml  requirements.txt
notebooks/: cluster_selector.ipynb  matrix_selectors.ipynb
src/: cluster_selector.py  fake_data.py
src/genomeselect/: cluster_selector.py  matrix_selector.py  synthetic_data.py
