[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "genomeselect"
version = "0.0.0"
description = "Select representative genomes from functional annotations and abundances"
license = "GPL-3.0"
authors = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
maintainers = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Robaina/genome_selector"
repository = "https://github.com/Robaina/genome_selector"
documentation = "https://github.com/Robaina/genome_selector"
keywords = ["metabolism", "enzymes", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: GLP-3 License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
]
packages = [{ include = "genomeselect", from = "src" }]
[tool.poetry.dependencies]
python = "^3.9"
[tool.poetry.scripts]
# genomeselect = "genomeselect.cli:main"
[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # mccabe complexity
    "E999", # match statement is not yet supported
    "W605", # ASCII art, verbatim text
]

[tool.ruff.isort]
known-first-party = ["genomeselect"]
